--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -11,16 +11,16 @@
     <title>Acesso - FitTrack</title>
     
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="~/lib/google-fonts/googleFonts.css" rel="stylesheet">
     
     <!-- FontAwesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     
     <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="~/lib/tailwind/tailwind-3.4.17.js"></script>
 
     <script>
         tailwind.config = {
@@ -49,7 +49,6 @@
             -webkit-backdrop-filter: blur(12px);
             border: 1px solid rgba(51, 65, 85, 0.5); 
         }
-        /* Remove o autocomplete background azul */
         input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:focus, input:-webkit-autofill:active {
             -webkit-box-shadow: 0 0 0 30px #0f172a inset !important;
             -webkit-text-fill-color: white !important;
@@ -59,7 +58,6 @@
 </head>
 <body class="min-h-[100dvh] flex items-center justify-center p-4 sm:p-6 relative overflow-hidden overflow-y-auto">
 
-    <!-- Efeitos de Fundo (Glow) -->
     <div class="absolute top-0 left-0 sm:top-1/4 sm:left-1/4 w-64 h-64 md:w-96 md:h-96 bg-emerald-500/20 rounded-full blur-[80px] md:blur-[100px] pointer-events-none transform -translate-x-1/2 -translate-y-1/2"></div>
     <div class="absolute bottom-0 right-0 sm:bottom-1/4 sm:right-1/4 w-64 h-64 md:w-96 md:h-96 bg-blue-600/10 rounded-full blur-[80px] md:blur-[100px] pointer-events-none transform translate-x-1/3 translate-y-1/3"></div>
 
@@ -174,7 +172,6 @@
 
 
         $(document).ready(function() {
-            // Alternar telas
             $('#btn-go-register').click(function(e) {
                 e.preventDefault();
                 $('#login-container').fadeOut(300, function() {
@@ -189,9 +186,7 @@
                 });
             });
 
-            // AJAX para registro
             $('#registerForm').on('submit', function(e) {
-                debugger
                 e.preventDefault();
 
                 var name = $('#register-name').val();
@@ -225,7 +220,6 @@
             });
 
             $('#loginForm').on('submit', function(e) {
-                debugger
                 e.preventDefault();
 
                 var email = $('#login-email').val();
