--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -401,7 +401,10 @@
                     "Você tem certeza que deseja excluir sua conta? TODOS os seus dados serão perdidos!"
                 );
 
-                if (!confirmed) return;
+                if (!confirmed){
+                    $btn.prop('disabled', false).removeClass('opacity-50 cursor-not-allowed');
+                    return;
+                }
 
 
                 @* $.ajax({
