--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,6 +11,8 @@
     <title>@ViewData["Title"] - FitTrack</title>
     
     <link href="~/lib/google-fonts/googleFonts.css" rel="stylesheet">
+    <link href="~/lib/notyf/notyf.min.css" rel="stylesheet">
+    @* <link href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css" rel="stylesheet"> *@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="~/lib/tailwind/tailwind-3.4.17.js"></script>
 
